# highwayns

./: .gitignore  Linux.txt  README.md  hrweb.txt  hrweb.txt.key
hrapp/android/: build.gradle
hrapp/ios/: Podfile
hrdesktop/: .gitignore
hrdesktop/common/: .gitignore  hrcommon.txt  hrcommon.txt.key  meishi.txt  meishi2.txt
hrdesktop/dispatch/: .gitignore  HPS.sln  UpgradeLog.htm  customer.xlsx  海威情報サービス.ppt
hrdesktop/tool/: .gitignore  AI32.htm  CompanyList_20130715.csv  CompanyList_20151220.csv  Dat.cs  Eight20170706143934utf8.csv  Eight20170709145258utf8.csv  EncodeType.cs  Enum_.cs  Form1.Designer.cs  Form1.cs  FormAddress.Designer.cs  FormAddress.cs  FormAndroid.Designer.cs  FormAndroid.cs  FormCompany.Designer.cs  FormCompany.cs  FormCompany.resx  FormCompanyEdit.Designer.cs  FormCompanyEdit.cs  FormConvert.Designer.cs  FormConvert.cs  FormDBData.Designer.cs  FormDBData.cs  FormDataBase.Designer.cs  FormDataBase.cs  FormDataClean.Designer.cs  FormDataClean.cs  FormGoogle.Designer.cs  FormGoogle.cs  FormHighwayTalk.Designer.cs  FormHighwayTalk.cs  FormJobOnHighway.Designer.cs  FormJobOnHighway.cs  FormJobType.Designer.cs  FormJobType.cs  FormMain.Designer.cs  FormMain.cs  FormMessage.Designer.cs  FormMessage.cs  (+77 more)
hrserver/: README.md  hrserver.txt  hrserver.txt.key  sql-structure.xls  tt_auto_ubuntu.sh
hrserver/auto_setup/: INSTALL.md  README.md  setup.sh
hrserver/pb/: IM.BaseDefine.proto  IM.Login.proto  IM.Server.proto  create.sh  sync.sh
hrserver/src/: README.md  change_conf.py  rebuild_all.sh  server_kill.py
hrserver/src/base/: Base.cbp  Base64.cpp  BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  Condition.cpp  Condition.h  ConfigFileReader.cpp  ConfigFileReader.h  EncDec.cpp  EncDec.h  EventDispatch.cpp  EventDispatch.h  HttpClient.cpp  HttpClient.h  HttpParserWrapper.cpp  HttpParserWrapper.h  ImLog.h  ImPduBase.cpp  ImPduBase.h  Lock.cpp  Lock.h  SeqAlloctor.cpp  SeqAlloctor.h  ServInfo.cpp  ServInfo.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  TokenValidator.cpp  TokenValidator.h  UtilPdu.cpp  UtilPdu.h  atomic.h  http_parser.cpp  http_parser.h  imconn.cpp  imconn.h  (+9 more)
hrserver/src/base/jsoncpp/: json_tool.h  json_writer.cpp
hrserver/src/base/pb/protocol/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Login.pb.cc  IM.Login.pb.h  IM.Server.pb.h  IM.SwitchService.pb.h
hrserver/src/base/security/: security.h
hrserver/src/db_proxy_server/: AutoPool.cpp  AutoPool.h  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  ProxyTask.h  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp  dbproxyserver.conf
hrserver/src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  Common.h  DepartAction.cpp  DepartAction.h  DepartModel.cpp  DepartModel.h  ExterLogin.cpp  ExterLogin.h  FileAction.cpp  FileAction.h  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  InterLogin.cpp  InterLogin.h  Login.cpp  Login.h  LoginStrategy.h  MessageContent.cpp  MessageContent.h  MessageCounter.cpp  MessageCounter.h  MessageModel.cpp  MessageModel.h  RecentSession.cpp  RecentSession.h  Register.cpp  Register.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  SessionModel.h  UserAction.cpp  UserAction.h  (+2 more)
hrserver/src/file_server/: CMakeLists.txt  FileConn.cpp  FileConn.h  file_server.cpp  file_server_util.h
hrserver/src/login_server/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  LoginConn.cpp  LoginConn.h  clean.sh  ipparser.cpp  ipparser.h  login_server.cpp  loginserver.conf
hrserver/src/msfs_server/: CMakeLists.txt  CriticalSection.h  FileLin.cpp  FileLin.h  FileManager.cpp  FileManager.h  HttpConn.cpp  HttpConn.h  Portable.h  StringUtils.cpp  StringUtils.h  log4cxx.properties  main.cpp  msfs.conf
hrserver/src/msg_server/: AttachData.cpp  AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  FileHandler.cpp  FileHandler.h  FileServConn.cpp  FileServConn.h  GroupChat.cpp  GroupChat.h  ImUser.cpp  ImUser.h  LoginServConn.cpp  LoginServConn.h  MsgConn.cpp  MsgConn.h  PushServConn.cpp  PushServConn.h  RouteServConn.cpp  RouteServConn.h  jsonxx.h  log4cxx.properties  msg_server.cpp  msgserver.conf
hrserver/src/push_server/: CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  apns_client.cpp  apns_client.h  apns_client_handler.cpp  apns_client_handler.h  apns_feedback_handler.cpp  apns_feedback_handler.h  apns_msg.cpp  apns_msg.h  byte_stream.cpp  byte_stream.h  jsonxx.cpp  log4cxx.properties  main.cpp  pdu_msg.cpp  pdu_msg.h  push_app.cpp  push_app.h  push_app_define.h  push_define.h  push_server.cpp  push_server.h  push_server_handler.cpp  push_server_handler.h  push_session.cpp  push_session.h  push_session_handler.cpp  push_session_handler.h  session_manager.cpp  session_manager.h
hrserver/src/push_server/bufferloop/: buffer_loop.hpp
hrserver/src/push_server/sigslot/: sigslot.h
hrserver/src/push_server/socket/: base_handler.hpp  base_io_stream.cpp  base_io_stream.h  base_msg.h  base_socket.hpp  base_thread.hpp  epoll_io_loop.cpp  epoll_io_loop.h  io_loop.cpp  io_loop.h  socket_io.h  socket_io_define.h  ssl_client_async.cpp  ssl_client_async.h  tcp_client_async.cpp  tcp_client_async.h  tcp_server.cpp  tcp_server.h  tcp_session_async.cpp  tcp_session_async.h
hrserver/src/push_server/thread/: base_thread.hpp
hrserver/src/push_server/timer/: Timer.hpp
hrserver/src/push_server/type/: base_type.h
hrserver/tools/: du_sort.py  gentags.sh  protoc
hrweb/: .project  bom_del.php  double  double.key  hrweb.txt  htmdouble  htmdouble.key  html  html.key  htmldouble  htmldouble.key  index.php  robots.txt  single.txt  single.txt.key  template.txt  template.txt.key
hrweb/admin/: admin_ad.php  admin_ajax.php  admin_article.php  admin_baidu_submiturl.php  admin_baiduxml.php  admin_category.php  admin_clearcache.php  admin_company.php  admin_crons.php  admin_database.php  admin_explain.php  admin_feedback.php  admin_help.php  admin_hotword.php  admin_hrtools.php  (+35 more)
(+3766 files in other folders)
